platform/minio/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
  namespace: minio
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    haproxy.router.openshift.io/timeout: 300s
  labels:
    app: minio
    
spec:
  port:
    targetPort: console
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: minio
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-s3
  namespace: minio
  labels:
    app: minio
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains
spec:
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  to:
    kind: Service
    name: minio
    weight: 100
  wildcardPolicy: None
