platform/minio/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-minio-egress
  namespace: minio
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app.kubernetes.io/instance: minio
spec:
  podSelector:
    matchLabels:
      app: minio
  policyTypes:
    - Egress
  egress:
    - {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-to-minio
  namespace: minio
  labels:
    app.kubernetes.io/instance: minio
spec:
  podSelector:
    matchLabels:
      app: minio
  policyTypes:
    - Ingress
  ingress:
    - {}
